Fix vertical spacing of tile in grid

--- a/draft-packages/tile/KaizenDraft/Tile/TileGrid.scss
+++ b/draft-packages/tile/KaizenDraft/Tile/TileGrid.scss
@@ -21,16 +21,6 @@
   }
 
   @media (max-width: 480px) {
-    display: block;
-  }
-}
-
-.tile {
-  @include ca-media-mobile {
-    @include ca-margin($bottom: $kz-spacing-md);
-
-    &:last-child {
-      margin: 0;
-    }
+    grid-template-columns: repeat(1, 100%);
   }
 }
